# Pipeline

./: .gitignore  CMakeLists.txt  README.md  pipeConfig.json  source.cpp  sourceGenerator.cpp
benchmark/: .gitignore  CMakeLists.txt  README.md
benchmark/plotter/: Plotter.py  initMeasurementsDebug.txt  initMeasurementsRelease.txt  plotter.py
benchmark/src/benchmarkLockfreeQueues/: BenchmarkLockfreeQueues.cpp  benchmarkLockfreeQueues.cpp
benchmark/src/benchmarkStageDataType/: BenchmarkStageDataType.cpp  benchmarkStageDataType.cpp
benchmark/src/benchmarkStageDataType/include/: IInitializator.hpp  OpencvInitializator.hpp  UtensorInitializator.hpp  XtensorInitializator.hpp  utensorInitializator.hpp  xtensorInitializator.hpp
benchmark/src/benchmarkSynchronizeConnectors/: BenchmarkSynchronizeConnectors.cpp  benchmarkSynchronizeConnectors.cpp
benchmark/src/testStageDataType/: testStageDataType.cpp
benchmark/src/testStageDataType/include/: IInitializator.hpp  opencvInitializator.hpp  utensorInitializator.hpp  xtensorInitializator.hpp
createDL/: CMakeLists.txt  CreateDL.cpp  README.md
dataStream/: CMakeLists.txt  DataStream.cpp  dataStream.cpp  dataStreamConfig.txt
dataStream/scheme/: ndarray.capnp  ndarray.capnp.h
examples/: CMakeLists.txt
examples/parallelPipeline/: CMakeLists.txt  OpencvChooser.hpp  PipeConfig.json  Source.cpp
examples/scalableDynamicParallelPipeline/: CMakeLists.txt  OpencvChooser.hpp  ScalableDynamicPipeConfigLinux.json  ScalableDynamicPipeConfigWin32.json  Source.cpp
examples/scalableParallelPipeline/: CMakeLists.txt  ScalablePipeConfig.json  Source.cpp
include/conveyor/: conveyor.hpp
include/opencv/: opencv.hpp
necessary/: Дневник.docx  Дневник.xlsx
necessary/4kStream/: Stream.py
necessary/PipelinePy/: capnp_stream.py  pipeline.py
necessary/hdfStream/: Stream.py
necessary/pipelinePy/: Capnp_stream.py  Pipeline.py
necessary/toGray/: Script.py
scheme/: ndarray.capnp.c++
src/: CMakeLists.txt  OpencvChooser.hpp  PipeConfig.json  ScalableDynamicPipeConfig.json  ScalablePipeConfig.json  Source.cpp  opencvChooser.hpp  pipeConfig.json  scalableDynamicPipeConfig.json  scalablePipeConfig.json  source.cpp  sourceGenerator.cpp
src/DLManager/: DLManager.hpp  IDLManager.hpp
src/MonitoringManager/: IMonitoringManager.hpp  MonitoringManager.hpp
src/NetworkBroker/: IBrokerReceiver.hpp  IBrokerSendler.hpp  ZmqReceiverBroker.hpp  ZmqSendlerBroker.hpp
src/NetworkManager/: INetworkReceiverManager.hpp  IReceiverNetworkManager.hpp  ISendlerNetworkManager.hpp  NetworkReceiverManager.hpp  StandartReceiverNetworkManager.hpp  StandartSendlerNetworkManager.hpp  ZmqReceiverManager.hpp
src/ProtoManager/: DeserializationManager.hpp  IDeserializationManager.hpp  ISerializationManager.hpp  SerializationManager.hpp
src/ScalableManager/: IScalableManager.hpp  ScalableManager.hpp
src/StageManager/: IStageManager.hpp  StageManager.hpp
src/builder/: IMonitoringBuilder.hpp  IReceiverNetworkManagerBuilder.hpp  ISendlerNetworkManagerBuilder.hpp  MonitoringAssembly.hpp  MonitoringBuilder.hpp  ReceiverNetworkManagerBuilder.hpp  SendlerNetworkManagerAssembly.hpp  SendlerNetworkManagerBuilder.hpp  StageBuilder.hpp
src/builder/parallelBuilder/: IStageBuilder.hpp  ParallelPipelineBuilder.hpp  StageAssembly.hpp  StageBuilder.hpp
src/builder/scalableBuilder/: IScalableManagerBuilder.hpp  IScalableStageBuilder.hpp  ScalableManagerAssembly.hpp  ScalableManagerBuilder.hpp  ScalableParallelPipelineBuilder.hpp  ScalableStageAssembly.hpp  ScalableStageBuilder.hpp
src/connector/: IConnector.hpp  MPMCConnector.hpp  SPSCConnector.hpp  SyncMPMCConnector.hpp
src/dLManager/: DLManager.hpp  IDLManager.hpp
src/detail/chooser/: Chooser.hpp  IChooser.hpp
src/detail/connector/: SyncMapConnector.hpp
src/detail/dl/: DL.hpp  DLBuilder.hpp
src/detail/dl/dlImplementaion/: DlLinux.hpp  DlWin.hpp  dlWin.hpp
src/detail/functions/: StageFunctions.hpp
src/detail/monitoring/: IMeasurements.hpp  IMonitoringMeasurements.hpp  Measurements.hpp  MonitoringMeasurements.hpp  RelaxedMeasurements.hpp
src/detail/pipeline/: ParallelPipelineComponents.hpp  ScalableParallelPipelineComponents.hpp
src/monitoringManager/: IMonitoringManager.hpp  MonitoringManager.hpp
src/networkBroker/: IBrokerReceiver.hpp  IBrokerSendler.hpp  ZmqReceiverBroker.hpp  ZmqSendlerBroker.hpp
src/networkManager/: IReceiverNetworkManager.hpp  ISendlerNetworkManager.hpp  StandartReceiverNetworkManager.hpp  StandartSendlerNetworkManager.hpp
src/parser/: DLParser.hpp  Parser.hpp  ScalablePropertyParser.hpp  SynchronyzePropertyParser.hpp  parser.hpp
src/pipeline/: IStage.hpp  ParallelPipeline.hpp  ScalableParallelPipeline.hpp  Stage.hpp  pipeline.hpp  stage.hpp
src/pipeline/frame/: Frame.hpp  IDFrame.hpp  IFrame.hpp  IIDFrame.hpp
src/protoManager/: DeserializationManager.hpp  IDeserializationManager.hpp  ISerializationManager.hpp  SerializationManager.hpp
src/scalableManager/: IScalableManager.hpp  ScalableManager.hpp
src/stageManager/: IStageManager.hpp  StageManager.hpp
src/utils/: InputDistributor.hpp  OutputDistributor.hpp  inputDistributor.hpp  outputDistributor.hpp
test/: CMakeLists.txt
test/src/connector/: ConnectorTest.cpp  connectorTest.cpp
test/src/parser/: ParserTest.cpp  parserTest.cpp
test/src/pipeline/: PipeConfig.json  PipeConfigWithError.json  StageTest.cpp  pipeConfig.json  pipeConfigWithError.json  stageTest.cpp
test/src/pipeline/frame/: FrameTest.cpp  frameTest.cpp
